discussion/kv_engine/179851/179851_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including kv_bucket.h

kv_bucket.h is the most expensive header as reported by
clang-build-analyzer [1]:

    *** Expensive headers:
    22311 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 54 times, avg 413 ms), included via:
      nexus_kvstore_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (700 ms)
      range_scan_test.cc.o ep_bucket.h  (683 ms)
      bucket_quota_change_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (658 ms)
      kv_bucket_test.cc.o kv_bucket_test.h  (648 ms)
      ...

Reduce the number of headers kv_bucket.h includes; by a combination of:

- Removing unnecessary headers (not directly needed by kv_bucket.h)

- Forward-declaring expensive types and moving the types into their
  own headers (so only other files which need the expensive type pay
  the cost of including them).

[1]: https://cv.jenkins.couchbase.com/view/Nightly/job/kv_engine-nightly-clang-build-analyzer/lastSuccessfulBuild/artifact/clang_build_analyzer_everything.log

Change-Id: I5da10ddd3a6362f4f371a58d909227360b323b97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-12 14:35:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 15:03:15.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20314/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:22:50: error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
    virtual void setKVFileHandle(std::unique_ptr<KVFileHandle> handle) {
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:26:19: error: unknown type name "KVFileHandle" [clang-diagnostic-error]
    virtual const KVFileHandle* getKVFileHandle() const {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:33:21: error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
    std::unique_ptr<KVFileHandle> kvFileHandle;
                    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20314/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:22:50:
error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20314/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23409/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.TTL_Expiry_Compaction/UnmeteredByPrivilege":

<pre>
[ RUN      ] MeteringTest/MeteringTest.TTL_Expiry_Compaction/UnmeteredByPrivilege
[2022-09-12T15:03:07.802Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:3120: Failure
[2022-09-12T15:03:07.802Z] Expected equality of these values:
[2022-09-12T15:03:07.802Z]   1
[2022-09-12T15:03:07.802Z]   after["wu"].get<std::size_t>() - before["wu"].get<std::size_t>()
[2022-09-12T15:03:07.802Z]     Which is: 0
[2022-09-12T15:03:07.802Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:3123: Failure
[2022-09-12T15:03:07.802Z] Expected: (expiredBefore) != (expiredAfter), actual: 3 vs 3
[2022-09-12T15:03:07.802Z] [  FAILED  ] MeteringTest/MeteringTest.TTL_Expiry_Compaction/UnmeteredByPrivilege, where GetParam() = 4-byte object <01-00 00-00> (2557 ms)
MeteringTest/MeteringTest.TTL_Expiry_Compaction/UnmeteredByPrivilege
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23409/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19536/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49297/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41438/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21642/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10120/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22286/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10022/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22646/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30687/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
